//=====================================================================
//	Revision History for package Matrix_search
//=====================================================================


//---------------------------------------------------------------------
//	actual revision
//---------------------------------------------------------------------

ALL : Removed Sqrt.
ALL : Fixed demos for LEDA namespace (as suggested by Matthias).
ALL : K::FT -> K::R::FT. (<- Sylvain)
ALL : Fixed sunpro problems.
ALL : Some fixes for sunpro 5.3.
SRC : Fixed rectangle construction bug.

//---------------------------------------------------------------------
//	 CGAL 2.3
//---------------------------------------------------------------------

GLOB: moved Optimisation_ref directory up one level
ALL : Changed concept names.
ALL : Added help button to pcenter demo.
ALL : Restricted options in pcenter demo to reasonable values.
ALL : Use new functor adaptors.
ALL : Worked over traits classes -> Kernel Traits.
ALL : Fixed warning on gcc3.
SRC : Minimum_enclosing_* -> Min_*
SRC : maximum_*_inscribed_k_gon -> maximum_*_inscribed_k_gon_2
SRC : extremal_polygon -> extremal_polygon_2
SRC : all_furthest_neighbors -> all_furthest_neighbors_2
SRC : Removed side-effect from expensive assertion in 3center.
SRC : Use CGAL_NTS for number type utilities.
SRC : Use Construct_iso_rectangle_2 from Kernel Traits.
SRC : Fixed more ledaing underscores.
SRC : Fixed leading underscore names.
SRC : Fixed bug in maximum_perimeter k-gon::min_k_gon.
SRC : Use CGAL compose functions.
SRC : Do not use non-std iterators (std::output_iterator etc.).
SRC : Several fixes for Borland.
SRC : Fixed bug in four-center computation.
SRC : Fixed range bug in expensive_assertion in extremal_polygon.
SRC : Workaround for peculiar egcs-1.* bug with pcenter_random tests.
SRC : Fixed two little bugs in 3cover (greater_equal ==> greater).
SRC : Fixed expensive checks.
SRC : Fixed internal compiler error on egcs-1.